--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "errorhandler": "1.5.0",
     "express": "4.16.2",
     "mongoose": "5.0.0-rc1",
-    "morgan": "1.9.0"
+    "morgan": "1.9.0",
+    "node-sspi": "0.2.2"
   },
   "devDependencies": {
     "node-dev": "3.1.3"
